welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:1: error: not found: type magenta
var cou:Color = Color:magenta ; 
                      ^Runner:1: error: object java.awt.Color is not a value
var cou:Color = Color:magenta ; 
                ^Runner:2: error: not found: value setBrosseCouleur
setBrosseCouleur(cou);
^